# gpicker

./: .gitignore  Makefile.am  bootstrap  configure.ac.in  daemon_main.c  gpicker-daemon.1  gpicker-mb.el  gpicker.el  loading.c  loading.h  main.c  project_files.c  project_files.h  setup_filenames.c  setup_filenames.h  simple_main.c
